[project]
name = "playwright-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sarasaranuranura", email = "wada121400@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-playwright>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_python"]
